test/expected/dynamic_cast_pi.out
dynamic cast x into pointer to int
                    ^
21: error: dynamic_cast must be to a pointer or reference to a class, struct, or union
